--- a/Pokedex_Codable/Pokedex_Codable/Storyboards/Base.lproj/Main.storyboard
+++ b/Pokedex_Codable/Pokedex_Codable/Storyboards/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -62,6 +63,7 @@
                                     <outlet property="pokemonIDLabel" destination="2dy-bF-nAh" id="AkK-nx-XxK"/>
                                     <outlet property="pokemonNameLabel" destination="JgB-is-Yu3" id="0La-fj-zd4"/>
                                     <outlet property="pokemonSpriteImageView" destination="RTw-Yx-SPf" id="cUx-Xb-LRg"/>
+                                    <segue destination="4nG-t3-wCU" kind="show" identifier="toPokemonDetailVC" id="r4F-BZ-VNe"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -74,7 +76,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dhx-FK-0CX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1098.4732824427481" y="-82.394366197183103"/>
+            <point key="canvasLocation" x="1112" y="-82"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="rYk-q8-69N">
@@ -94,8 +96,98 @@
             </objects>
             <point key="canvasLocation" x="392" y="-82"/>
         </scene>
+        <!--Pokemon DetailVC-->
+        <scene sceneID="NIC-u6-CRB">
+            <objects>
+                <viewController id="4nG-t3-wCU" customClass="PokemonDetailVC" customModule="Pokedex_Codable" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="I97-CI-cRs">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="PXC-AJ-3bS">
+                                <rect key="frame" x="8" y="204" width="377" height="260"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="260" id="c9A-Ct-48m"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="njg-ZU-OjS">
+                                <rect key="frame" x="82.666666666666671" y="270" width="227.66666666666663" height="128"/>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="rw2-va-DOb">
+                                <rect key="frame" x="8" y="494" width="377" height="316"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="moveCell" textLabel="DVo-tA-atf" style="IBUITableViewCellStyleDefault" id="yvb-Ai-M8O">
+                                        <rect key="frame" x="0.0" y="50" width="377" height="43.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yvb-Ai-M8O" id="e75-Ae-ly4">
+                                            <rect key="frame" x="0.0" y="0.0" width="377" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="DVo-tA-atf">
+                                                    <rect key="frame" x="20" y="0.0" width="337" height="43.666667938232422"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="lUK-hg-wGi">
+                                <rect key="frame" x="8.6666666666666572" y="133" width="376" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5xf-Ct-hcS">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="6"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search for a Pokemon" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wAc-nu-Hpy">
+                                        <rect key="frame" x="60" y="4.6666666666666572" width="316" height="40.666666666666664"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="QgV-nw-bTl"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="rw2-va-DOb" firstAttribute="top" secondItem="PXC-AJ-3bS" secondAttribute="bottom" constant="30" id="1uV-EV-MtP"/>
+                            <constraint firstItem="lUK-hg-wGi" firstAttribute="centerX" secondItem="PXC-AJ-3bS" secondAttribute="centerX" id="9Hg-gl-SHt"/>
+                            <constraint firstItem="PXC-AJ-3bS" firstAttribute="leading" secondItem="QgV-nw-bTl" secondAttribute="leading" constant="8" id="BAS-bm-gB8"/>
+                            <constraint firstItem="lUK-hg-wGi" firstAttribute="top" secondItem="QgV-nw-bTl" secondAttribute="top" constant="30" id="IrL-Mf-Hsq"/>
+                            <constraint firstItem="njg-ZU-OjS" firstAttribute="centerX" secondItem="PXC-AJ-3bS" secondAttribute="centerX" id="PcE-X2-iek"/>
+                            <constraint firstItem="njg-ZU-OjS" firstAttribute="width" secondItem="PXC-AJ-3bS" secondAttribute="width" multiplier="0.603015" id="R1w-ar-s2y"/>
+                            <constraint firstItem="PXC-AJ-3bS" firstAttribute="top" secondItem="lUK-hg-wGi" secondAttribute="bottom" constant="21" id="bqZ-1c-o6R"/>
+                            <constraint firstItem="PXC-AJ-3bS" firstAttribute="centerX" secondItem="QgV-nw-bTl" secondAttribute="centerX" id="dIf-xW-eOc"/>
+                            <constraint firstItem="njg-ZU-OjS" firstAttribute="height" secondItem="PXC-AJ-3bS" secondAttribute="height" multiplier="0.492308" id="ec4-aN-44M"/>
+                            <constraint firstItem="rw2-va-DOb" firstAttribute="leading" secondItem="QgV-nw-bTl" secondAttribute="leading" constant="8" id="ggZ-4U-BU8"/>
+                            <constraint firstItem="QgV-nw-bTl" firstAttribute="trailing" secondItem="PXC-AJ-3bS" secondAttribute="trailing" constant="8" id="h6D-i9-ce4"/>
+                            <constraint firstItem="QgV-nw-bTl" firstAttribute="bottom" secondItem="rw2-va-DOb" secondAttribute="bottom" constant="8" id="mfv-IH-iW8"/>
+                            <constraint firstItem="njg-ZU-OjS" firstAttribute="centerY" secondItem="PXC-AJ-3bS" secondAttribute="centerY" id="tgO-8X-7Rr"/>
+                            <constraint firstItem="QgV-nw-bTl" firstAttribute="trailing" secondItem="rw2-va-DOb" secondAttribute="trailing" constant="8" id="viu-KA-cTa"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="BkQ-fO-bjy"/>
+                    <connections>
+                        <outlet property="pokemonIDLabel" destination="5xf-Ct-hcS" id="pf7-HC-Af3"/>
+                        <outlet property="pokemonMovesTableView" destination="rw2-va-DOb" id="bBG-9i-cfq"/>
+                        <outlet property="pokemonNameLabel" destination="wAc-nu-Hpy" id="xJZ-YE-0m7"/>
+                        <outlet property="pokemonSpriteImageView" destination="njg-ZU-OjS" id="dTk-0a-kNG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UEL-ba-yE3" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1822" y="-82"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="background" width="900" height="582"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
